system/argocd/base/install-ksops.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      volumes:
      - name: custom-tools
        emptyDir: {}
      - name: sops-age
        secret:
          secretName: argocd-sops-age
      containers:
      - name: argocd-repo-server
        volumeMounts:
        - mountPath: /usr/local/bin/kustomize
          name: custom-tools
          subPath: kustomize
        - mountPath: /usr/local/bin/ksops
          name: custom-tools
          subPath: ksops
        - mountPath: /home/argocd/.config/sops/age
          name: sops-age
          readOnly: true
