system/argocd/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: argocd.seigra.net
    name: argocd
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ''
        kind: Secret
        name: argocd-gateway-tls
      mode: Terminate
