system/argocd/base/server-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "1"
spec:
  hostnames:
  - argocd.seigra.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: argocd
    sectionName: argocd
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: argocd-server
      namespace: argocd
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
